feat(subscription): add app plans api endpoint
